fix room extra margin

--- a/_sass/_mysteryManila.sass
+++ b/_sass/_mysteryManila.sass
@@ -826,7 +826,7 @@ footer
       margin-top: 50px
   #rooms
     .room
-      margin: 30px 0
+      padding: 30px 0
       .hero-content
         display: none !important
 
